--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@analytics/google-analytics": "^1.0.5",
     "@emailjs/browser": "^3.10.0",
     "@heroicons/react": "^2.0.16",
     "@tailwindcss/forms": "^0.5.3",
